// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary UDEMY with 1 expense totalling $100.00 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expenses
     totalling 
    $100.00
     
  </h2>
</div>
`;

exports[`should render Expenses Summary UDEMY with 3 expenses totalling $1,500.00 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling 
    $1,500.00
     
  </h2>
</div>
`;

exports[`should render Expenses Summary with 1 expense totalling $100.00 1`] = `
<div>
  <p>
    Total: 
    $100.00
    , from 
    1
     expense
    s
  </p>
</div>
`;

exports[`should render Expenses Summary with 3 expenses totalling $1,500.00 1`] = `
<div>
  <p>
    Total: 
    $1,500.00
    , from 
    3
     expense
    s
  </p>
</div>
`;
